improve JPMS support
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>